<resources>
    <string name="app_name">Station Viewer</string>
    <string name="main_activity_name">Data Retriever</string>
    <string name="title_activity_maps">Choose your Station</string>
    <string name="plot_activity_name">Graph View</string>
    <string name="remote_control_activity_name">Remote Control</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_statistics">Export Statistics</string>
    <string name="action_data">Export Data</string>
    <string name="action_help">Help</string>

    <string name="help1">A. To see details for your weather station press the marker on the map for two seconds.
        (Zoom in first)</string>
    <string name="help2">B. If you haven\'t any weather station just press on the map for about two seconds.</string>
    <string name="help3">C. You can export statistics for the downloaded data by pressing the \"Export Statistics\"
        button in the settings menu.</string>
    <string name="help4">D. To see details about a point in the plot diagram just zoom in and press on it.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
