<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_statistics"
        android:orderInCategory="1"
        android:title="@string/action_statistics"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_data"
        android:orderInCategory="2"
        android:title="@string/action_data"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_help"
        android:orderInCategory="3"
        android:title="@string/action_help"
        app:showAsAction="never" />
</menu>
